--- a/src/SASS/_fonts.scss
+++ b/src/SASS/_fonts.scss
@@ -1,4 +1,5 @@
 @import "_mixins/font-face";
 
 @include font-face("DINPro", "../fonts/DINPro/DINPro");
+@include font-face("DINPro", "../fonts/DINProBold/DINProBold", bold);
 @include font-face("Gilroy", "../fonts/Gilroy/Gilroy");
