--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -5,8 +5,39 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+$accent-color: #F47821;
+
 .wrapper{
     max-width: 1440px;
     margin: 0 auto;
     font-family: "DINPro", sans-serif;
+}
+//header
+.header{
+    background: #fff;
+    text-align: center;
+    .header__title{
+        font-size: 2.78rem;
+        margin-top: 11.5%;
+        color: #222222;
+    }
+    .header__text{
+        margin-top: 1.3%;
+        margin-bottom: 3.8%;
+        font-size: 1.045rem;
+        color: #4A4556;
+        span{
+            color: $accent-color;
+        }
+    }
+    .header__button{
+        margin-left: 2%;
+        font-size: 1rem;
+        font-weight: bold;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #222222;
+        
+    }
 }
