--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -17,14 +17,16 @@ $accent-color: #F47821;
 .header{
     background: #fff;
     text-align: center;
+    padding: 0 15px;
     .header__title{
-        font-size: 2.78rem;
+        font-size: 2.9rem;
+        font-weight: normal;
         margin-top: 11.5%;
         color: #222222;
     }
     .header__text{
         margin-top: 1.3%;
-        margin-bottom: 3.8%;
+        margin-bottom: 2.9%;
         font-size: 1.045rem;
         color: #4A4556;
         span{
@@ -32,11 +34,55 @@ $accent-color: #F47821;
         }
     }
     .header__button{
-        margin-left: 2%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 236px;
+        height: 54px;
+        margin: 0 auto;
         font-size: 1rem;
         font-weight: bold;
-        text-decoration: none;
         text-transform: uppercase;
-        color: #222222;    
+        color: #222222;         
+        cursor: pointer;
+        .before{
+            height: 54px;
+            width: 54px;
+            font-weight: normal;
+            font-size: 34px;
+            color: $accent-color;
+            background: #F9F9F9;
+            border-radius: 100%;
+        }
+        &:hover{
+            background: #F9F9F9;
+            border-radius: 111px; 
+            padding-right: 20px;    
+        }
+        .header__button--content{
+            margin-left: -6px;
+        }
+        
+        
+    
     }
+}
+// section class="img"
+.img{
+    background-image: url(../../production/img/Rectangle-min.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    min-width: 100%;
+    height: 100%;
+    margin-top: 9%;
+}
+//section class="scope"
+.scope{
+    background-color: #F7F5FA;
+    min-width: 445px;
+    
+    .scope__block{
+        width: 972px;
+    }
+
 }
