complite section main-text

--- a/src/SASS/_fonts.scss
+++ b/src/SASS/_fonts.scss
@@ -3,3 +3,4 @@
 @include font-face("DINPro", "../fonts/DINPro/DINPro");
 @include font-face("DINPro", "../fonts/DINProBold/DINProBold", bold);
 @include font-face("Gilroy", "../fonts/Gilroy/Gilroy");
+@include font-face("Roboto", "../fonts/Roboto/Roboto");
