--- a/src/SASS/_media.scss
+++ b/src/SASS/_media.scss
@@ -4,4 +4,7 @@
         border-radius: 111px; 
         padding-right: 20px;    
     }
+    .advantage__card:hover{
+        box-shadow: 0px 0px 10px $accent-color; 
+    }
 }
