--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -96,8 +96,8 @@ $darc-color: #222222;
             text-transform: uppercase;
         }
         p{
-            font-size: 1.1rem;
-            margin-top: 1.1%;
+            font-size: 1.5rem;
+            margin-top: 3.1%;
             line-height: 30px;
             letter-spacing: -0.03em;
             color: $darc-color;
@@ -122,6 +122,54 @@ $darc-color: #222222;
         line-height: 26px;
         color: #4E4D53;
         margin-top: 3%;
+    }
+}
+//section class="advantage"
+.advantage{
+    background-color: #F7F5FA;
+    text-align: center;
+    padding-top: 8%;
+    padding-bottom: 4.5%;
+    .advantage__container{
+        max-width: 1200px;
+        min-height: 374px;
+        margin: 0 auto;
+        display: flex;
+    }
+    .advantage__title{
+        font-size: 2.4rem;
+        font-weight: normal;
+        margin-bottom: 3.2%;
+    }
+    .advantage__card{
+        text-align: left;
+        padding: 14px;
+        width: 90%;
+        img{
+            margin-left: 1%;
+            margin-bottom: 8%;
+        }
+        h3{
+            font-size: 1.25rem;
+            color: #000000;
+            letter-spacing: 0.01rem;
+            margin-bottom: 4%;
+        }
+        .advantage__card--line{
+            content: " ";
+            width: 24px;
+            height: 2px;
+            background-color: $accent-color;
+            margin-top: 6%;
+            margin-bottom: 6%;
+        }
+        p{
+            font-family: "Roboto";
+            font-size: 1.08rem;
+            width: 90%;
+            line-height: 1.7rem;
+           
+        }
     }
 }
 
