--- a/src/SASS/_media.scss
+++ b/src/SASS/_media.scss
@@ -7,4 +7,55 @@
     .advantage__card:hover{
         box-shadow: 0px 0px 10px $accent-color; 
     }
+    button:hover{
+        font-size: 1rem;
+        box-shadow: 0 0 3px white;
+    }
+    input:hover, textarea:hover{
+        border-bottom: white 4px solid;
+    }
+}
+@media screen and (max-width: 992px){
+    body{
+        padding: 0 15px;
+    }
+    .footer{
+        padding-left: 4%;
+    }
+}
+@media screen and (max-width: 768px){
+    html{
+        font-size: 12px;
+    }
+    .scope__block .scope__block--content{
+        width: 100%;
+        height: auto;
+    }
+    .advantage__container{
+        flex-direction: column;
+    }
+    .main-text{
+        margin-top: 36%;
+    }
+    .footer .footer-form{
+        width: 100%;
+    }
+    ol .footer-form__input-title{
+        flex-direction: column;
+    }
+    
+
+}
+@media screen and (max-width: 450px){
+    .main-text{
+        padding: 10% 5%;
+        margin-top: -75%;
+    }
+    .scope__block .scope__block--content{
+        padding-top: 18px;
+        margin-top: -44%;
+        margin-bottom: 34%;
+    }
+    
+
 }
