--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -81,13 +81,13 @@ $darc-color: #222222;
         flex-wrap: wrap;
         width: 972px;
         height: 464px;
-        background-color: #fff;
         margin-top: 28.4%;
     }
     .scope__block--content{
         width: 50%;
         height: 50%;
         padding: 50px 60px;
+        background-color: #fff;
         border: #F7F5FA solid 3px;
         h3{
             font-size: 0.8rem;
@@ -174,7 +174,6 @@ $darc-color: #222222;
 }
 //footer-form
 .footer{
-    height: 257%;
     background: #161616;
     .footer-form{
         width: 765px;
@@ -239,9 +238,10 @@ $darc-color: #222222;
         margin-top: 5%;
     }
     button{
-        width: 574px;
+        width: 75%;
         height: 54px;
         margin-top: 8.4%;
+        margin-bottom: 16%;
         border-radius: 26px;
         color: $accent-color;
         background: white;
@@ -250,7 +250,7 @@ $darc-color: #222222;
         font-weight: bold;
         cursor: pointer;
     }
-       
+    
 }
 
 @import "media";
